# utility

./: .gitignore  CMakeLists.txt  buffer.cpp  buffer.hpp  filemap.cpp  filemap.hpp  numinc.hpp  strutil.hpp  timer.cpp  timer.hpp
utility.xcodeproj/: project.pbxproj
utility.xcodeproj/xcshareddata/xcschemes/: utility.xcscheme
